--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypeMaster || Typing Speed Test</title>
+    <title>Typing Speed Test</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -11,7 +11,7 @@
 
     <div class="container">
       <header>
-        <h1>TypeMaster</h1>
+        <h1>Typing Speed Test</h1>
         <div class="controls">
           <button class="theme-toggle" id="theme-toggle">🌙</button>
         </div>
