--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
     <footer>
       <p>Typing Speed Test &copy; 2025 | Press Tab to reset the test</p>
       <p>Taafeef Bin Montaquim || All Rights Reserved</p>
+      <p>
+        Also check my other website:
+        <br />
+        <a
+          href="https://weatherapp-ai.netlify.app/"
+          target="_blank"
+          rel="noopener"
+          >www.weatherapp-ai.com</a
+        >
+      </p>
     </footer>
 
     <script src="script.js"></script>
