--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container">
       <header>
-        <h1>Typing Speed Test</h1>
+        <h1>TypeMaster || Typing Speed Test</h1>
         <div class="controls">
           <button class="theme-toggle" id="theme-toggle">🌙</button>
         </div>
@@ -128,3 +128,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
