--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         Also check my other website:
         <br />
         <a
-          href="https://weatherapp-ai.netlify.app/"
+          href="https://weatherify-ai.netlify.app/"
           target="_blank"
           rel="noopener"
-          >www.weatherapp-ai.com</a
+          >www.weatherify-ai.com</a
         >
       </p>
     </footer>
@@ -128,4 +128,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
