--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div class="topographic-bg"></div>
@@ -362,20 +358,13 @@
             <div class="form-error" id="login-error"></div>
 
             <div class="setting-group">
-              <button id="email-login" tabindex="-1" style="width: 100%">
-                Login
-              </button>
+              <button id="email-login" tabindex="-1">Login</button>
             </div>
 
             <div style="text-align: center; margin: 1rem 0">OR</div>
 
             <div class="setting-group">
-              <button
-                id="google-login"
-                class="secondary"
-                tabindex="-1"
-                style="width: 100%"
-              >
+              <button id="google-login" class="secondary" tabindex="-1">
                 Login with Google
               </button>
             </div>
