--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="modal">
         <div class="modal-header">
           <h2>Congratulations, <span id="result-name"></span>! 🎊</h2>
-          <button class="modal-close" id="close-results" tabindex="-1">
+          <button class="modal-close-btn" id="close-results" tabindex="-1">
             ×
           </button>
         </div>
@@ -314,8 +314,12 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button id="retry-test" tabindex="-1">Try Again</button>
-          <button id="share-results" tabindex="-1">Share Results</button>
+          <button id="retry-test" tabindex="-1" class="modal-btn">
+            Try Again
+          </button>
+          <button id="share-results" tabindex="-1" class="modal-btn">
+            Share Results
+          </button>
         </div>
       </div>
     </div>
