--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
                     Curriculum
                 </div>
             </div>
-
             <div class="mode-settings active" id="timed-settings">
                 <div class="settings-grid">
                     <div class="setting-group">
@@ -380,12 +379,13 @@
         <div class="achievements" id="achievements-container">
             <!-- Achievements will be generated here -->
         </div>
-
+        <hr>
         <footer>
-            <p>
-                &copy; 2023 TypeMaster. All rights reserved. |
-                <a href="#" id="privacy-link" tabindex="-1">Privacy Policy</a> |
-                <a href="#" id="terms-link" tabindex="-1">Terms of Service</a>
+            <p>Taafeef Bin Montaquim || All Rights Reserved</p>
+            <p>Check my other sites:
+                <br>
+                <a href="https://taskschedulepro.netlify.app/" id="privacy-link" tabindex="-1">Task Schedule Pro</a> |
+                <a href="https://weatherify-ai.netlify.app/" id="terms-link" tabindex="-1">Weatherify</a>
             </p>
         </footer>
     </div>
