--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords"
         content="typing test, typing speed test, WPM test, words per minute, typing practice, typing tutor, typing game, keyboard test, typing skills, typing trainer, online typing test, free typing test, typing speed, typing accuracy, touch typing, typing lessons, typing course, typing exercises, learn to type, improve typing speed, typing challenge, typing competition, typing master, typemaster, speed typing, fast typing, typing assessment, typing evaluation, typing benchmark, typing metrics, typing statistics, typing analytics, typing performance, typing improvement, typing drills, typing practice test, typing speed game, typing accuracy test, mechanical keyboard, keyboard sounds, typing sounds, ASMR typing, typewriter sounds, keyboard simulator, typing simulator, typing software, typing app, typing website, typing tool, typing platform, typing interface, typing program, WPM calculator, CPM calculator, characters per minute, keystrokes, keystroke counter, typing heatmap, typing errors, error analysis, typing feedback, real-time typing, live typing stats, typing progress, typing tracker, typing history, typing records, typing achievements, typing badges, typing leaderboard, typing competition online, competitive typing, multiplayer typing, typing race, typing battle, typing curriculum, typing education, typing for students, typing for beginners, advanced typing, professional typing, business typing, data entry practice, data entry test, data entry skills, office skills, computer skills, productivity tools, efficiency tools, skill improvement, self-improvement, online learning, e-learning, educational tools, learning platform, skill training, typing certification, typing proficiency, typing mastery, English typing, Bangla typing, bilingual typing, multilingual typing, language typing, punctuation typing, numbers typing, special characters, symbols typing, coding typing, programming typing, developer tools, coder typing test, programmer typing, survival mode, timed test, practice mode, AI practice, prediction challenge, curriculum mode, numbers only mode, typing modes, custom typing test, personalized typing, adaptive learning, AI-powered typing, machine learning typing, smart typing practice, intelligent typing tutor, typing recommendations, typing suggestions, typing tips, typing techniques, typing methods, typing strategies, home row keys, finger placement, proper typing, ergonomic typing, healthy typing, typing posture, typing habits, typing workflow, typing efficiency, typing productivity, typing optimization, typing enhancement, typing development, typing growth, typing journey, typing goals, typing milestones, typing targets, typing objectives, Firebase typing, cloud typing, online profile, user authentication, Google sign-in, typing account, save progress, typing data, typing cloud storage, typing synchronization, cross-platform typing, responsive typing, mobile typing, desktop typing, tablet typing, web typing test, browser typing test, Chrome typing, Firefox typing, Safari typing, Edge typing, typing themes, dark mode typing, light mode typing, custom themes, typing fonts, typing customization, typing settings, typing preferences, typing configuration, typing options, typing controls, typing interface design, modern typing UI, beautiful typing test, UX typing, user experience typing, interactive typing, engaging typing, fun typing, enjoyable typing, motivational typing, gamified typing, typing rewards, typing incentives, typing motivation, typing encouragement, typing support, typing community, typing help, typing guide, typing tutorial, typing instructions, typing FAQ, typing documentation, typing resources, typing reference, typing knowledge, typing information, typing education platform, typing learning system, typing improvement program, typing development course, typing enhancement tool, typing mastery system, professional typing test, enterprise typing, corporate typing, business typing test, employee typing assessment, hiring typing test, recruitment typing, job typing test, career typing skills, workplace typing, office typing test, administrative typing, secretary typing, transcription typing, court reporter typing, stenographer typing, legal typing, medical typing, academic typing, student typing, teacher typing, school typing, university typing, college typing, education typing, classroom typing, homework typing, assignment typing, essay typing, writing typing, content creation typing, blogging typing, journalism typing, creative writing typing, author typing, writer typing, novelist typing, screenwriter typing, copywriter typing, technical writing typing, documentation typing, report typing, email typing, communication typing, correspondence typing, messaging typing, chat typing, instant messaging typing, social media typing, tweet typing, post typing, comment typing, reply typing, response typing, feedback typing, review typing, rating typing, testimonial typing, endorsement typing" />
-    <title>TypeMaster | Typing Speed Test</title>
     <!-- Firebase App and Auth SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
@@ -92,9 +91,6 @@
                 <div class="game-mode-btn" data-mode="survival" tabindex="-1">
                     Survival Mode
                 </div>
-                <div class="game-mode-btn" data-mode="practice" tabindex="-1">
-                    AI Practice
-                </div>
                 <div class="game-mode-btn" data-mode="prediction" tabindex="-1">
                     Prediction Challenge
                 </div>
@@ -158,6 +154,9 @@
                             <option value="soft">Soft (Membrane)</option>
                             <option value="clicky">Clicky (Tactile)</option>
                             <option value="silent">Silent (Subtle)</option>
+                            <option value="vintage">Vintage Computer</option>
+                            <option value="modern">Modern Laptop</option>
+                            <option value="gaming">Gaming Keyboard</option>
                         </select>
                     </div>
 
@@ -202,29 +201,6 @@
                         <select id="survival-language" tabindex="-1">
                             <option value="english" selected>English</option>
                             <option value="bangla">Bangla</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-
-            <div class="mode-settings" id="practice-settings">
-                <div class="ai-practice">
-                    <h3>AI-Powered Practice</h3>
-                    <p>
-                        Based on your previous performance, we recommend practicing these
-                        areas:
-                    </p>
-                    <div id="ai-suggestions">
-                        <!-- AI suggestions will appear here -->
-                    </div>
-                    <div class="setting-group">
-                        <label for="practice-focus">Focus Area</label>
-                        <select id="practice-focus" tabindex="-1">
-                            <option value="speed">Speed</option>
-                            <option value="accuracy">Accuracy</option>
-                            <option value="difficult-words">Difficult Words</option>
-                            <option value="numbers">Numbers</option>
-                            <option value="punctuation">Punctuation</option>
                         </select>
                     </div>
                 </div>
@@ -285,6 +261,9 @@
                 <div class="theme-option" style="background: #2563eb" data-theme="blue" tabindex="-1"></div>
                 <div class="theme-option" style="background: #db2777" data-theme="pink" tabindex="-1"></div>
                 <div class="theme-option" style="background: #059669" data-theme="green" tabindex="-1"></div>
+                <div class="theme-option" style="background: #7c3aed" data-theme="purple" tabindex="-1"></div>
+                <div class="theme-option" style="background: #ea580c" data-theme="orange" tabindex="-1"></div>
+                <div class="theme-option" style="background: #0891b2" data-theme="cyan" tabindex="-1"></div>
             </div>
 
             <div class="font-selector">
@@ -292,6 +271,10 @@
                 <div class="font-option" data-font="monospace" tabindex="-1">Monospace</div>
                 <div class="font-option" data-font="serif" tabindex="-1">Serif</div>
                 <div class="font-option" data-font="sans-serif" tabindex="-1">Sans-Serif</div>
+                <div class="font-option" data-font="courier" tabindex="-1">Courier</div>
+                <div class="font-option" data-font="georgia" tabindex="-1">Georgia</div>
+                <div class="font-option" data-font="arial" tabindex="-1">Arial</div>
+                <div class="font-option" data-font="times" tabindex="-1">Times</div>
             </div>
 
             <button id="start-btn" tabindex="-1">Start Typing Test</button>
@@ -309,7 +292,7 @@
                 <input type="text" id="typing-input" placeholder="Start typing here..." autocomplete="off"
                     tabindex="0" />
                 <button id="toggle-keyboard" class="toggle-keyboard-btn" aria-label="Toggle keyboard">
-                    <i class="fas fa-keyboard"></i> <span>Show Keyboard</span>
+                    <i class="fas fa-keyboard"></i> <span>Hide Keyboard</span>
                 </button>
                 <div class="keyboard-container">
                     <div class="on-screen-keyboard" id="keyboard">
@@ -349,7 +332,7 @@
         </div>
 
         <div class="ai-analysis">
-            <h2>AI Performance Analysis</h2>
+            <h2>Performance Analysis</h2>
             <div class="analysis-content" id="analysis-content">
                 <p>Complete a test to see your detailed analysis</p>
             </div>
