--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <p>Taafeef Bin Montaquim || All Rights Reserved</p>
             <p>Check my other sites:
                 <br>
-                <a href="https://taskschedulepro.netlify.app/" id="privacy-link" tabindex="-1">Task Schedule Pro</a> |
+                <a href="https://schedulemaster-ai.netlify.app/" id="privacy-link" tabindex="-1">Task Schedule Pro</a> |
                 <a href="https://weatherify-ai.netlify.app/" id="terms-link" tabindex="-1">Weatherify</a>
             </p>
         </footer>
